# vocab

./: .gitignore  English  LICENSE  gui.py  pyproject.toml  radial_bar_chart.py  requirements.txt  set_backend.sh  setup.cfg  string_matching.py  test.h5  vocab.py  vocab_edit.py  vocab_en.h5  vocab_en_init.h5  vocab_es.h5  vocab_fr_backup.h5  vocab_input.py  vocab_train.py  vocable.py
data/vocab_libraries/: vocab_en.h5  vocab_fr_init.h5
old/: vocab_input.py
src/vocab/: config.py  db_init.py  select.py  to_db.py  vocable.py
src/vocab/core/: chrome_bookmarks.py  config.py  db_init.py  language_select.py  load_from_db.py  practice.py  select_for_practice.py  to_db.py  vocab_add.py  vocab_add_web.py  vocab_practice.py  vocable.py
src/vocab/vis/: display_stats.py  plot_test.py  progress_bar.py  radial_bar_chart.py  terminal_interface.py  user_interface.py
vocab/: config.py
vocab/classes/: vocab.py
vocab/utilities/: radial_bar_chart.py  terminal_commands.py
