[metadata]
name = vocab
description = Vocable Training Program for the Command Line
author = JP Bureik
license = GPL-3.0 
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11

[options]
packages =
    vocab
install_requires =
    pandas>=1
    tables>=3.9
    sqlalchemy>=2
    mysql-connector-python>=8
    tabulate>=0
    matplotlib<=3.3
    itermplot>=0
    termcolor>=2
python_requires = >=3.10
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest_cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
vocab = py.typed

[flake8]
max-line-length = 79
